Fix: rTable row Alignment

--- a/src/component/common/style/IconBtn.module.css
+++ b/src/component/common/style/IconBtn.module.css
@@ -2,17 +2,13 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 7px;
-
+  padding: 2px 5px;
   cursor: pointer;
   justify-content: center;
-  /* \border: 2px solid var(--color-text-primary); */
   border-radius: var(--borderRadius);
   background: var(--color-bg-tertiary);
   user-select: none;
-
   justify-content: center; /* Ensure the content (icon + label) is centered */
-
   transition: background-color 0.3s ease;
 }
 
