--- a/src/component/common/table/style/Table.module.css
+++ b/src/component/common/table/style/Table.module.css
@@ -53,6 +53,7 @@
   display: flex;
   flex: 1;
   justify-content: center;
+  align-items: center;
   text-wrap: wrap;
 }
 
